fixed z-index on my selected link in services page.

--- a/less/index.less
+++ b/less/index.less
@@ -570,7 +570,6 @@ p {
       }
     }
     .tabs-link-selected {
-      z-index: 2;
       background-color: @selected;
       color: @fontcolor;
       &:hover {
